[package]
name = "sce"
version = "0.1.0"
authors = ["Avi Srivastava <avi.srivastava@nyu.edu>", "Rob Patro <rob@cs.umd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"
csv = "1.1.4"
sprs = "0.9.2"
flate2 = "1.0.19"
byteorder = "1.3.4"
num-traits = "0.2.14"
