[package]
name = "sce"
version = "0.1.0"
authors = ["Avi Srivastava <avi.srivastava@nyu.edu>", "Rob Patro <rob@cs.umd.edu>"]
edition = "2018"
description = "A library for importing and managing various single-cell matrices."
license-file = "LICENSE"
readme= "README.md"
repository = "https://github.com/parazodiac/SingleCellExperiment"
homepage = "https://github.com/parazodiac/SingleCellExperiment"
documentation = "https://github.com/parazodiac/SingleCellExperiment"
include = [
    "/src/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]
keywords = ["single-cell", "single-cell RNA-seq", "single-cell ATAC-seq"]
categories = ["command-line-utilities", "science"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
csv = "1.1.6"
sprs = "0.9.4"
flate2 = "1.0.19"
byteorder = "1.4.3"
num-traits = "0.2.14"
