[package]
name = "sce"
version = "0.2.0"
authors = ["Avi Srivastava <avi.srivastava@nyu.edu>", "Rob Patro <rob@cs.umd.edu>"]
edition = "2021"
description = "A library for importing and managing various single-cell matrices."
license-file = "LICENSE"
readme= "README.md"
repository = "https://github.com/parazodiac/SingleCellExperiment"
homepage = "https://github.com/parazodiac/SingleCellExperiment"
documentation = "https://github.com/parazodiac/SingleCellExperiment"
include = [
    "/src/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
]
keywords = ["single-cell", "RNA-seq", "ATAC-seq"]
categories = ["command-line-utilities", "science"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
csv = "1.2.2"
sprs = "0.11.1"
flate2 = "1.0.26"
byteorder = "1.4.3"
num-traits = "0.2.15"
trait-set = "0.3.0"
